tests/ui/associated-type-bounds/implied-bounds-cycle.rs
trait A {
    type T;
}

trait B: A<T: B> {}
//~^ ERROR cycle detected when computing the implied predicates of `B`

fn main() {}
